# halal

./: CMakeLists.txt  DisjunctiveGraph.cpp  GeneticJobShop.cpp  GeneticQuadraticAssignment.cpp  GeneticSolvable.h  GeneticSolver.cpp  GeneticSolver.h  HillClimb.h  HillClimbSolvable.h  JobShopProblem.cpp  QuadraticAssignment.cpp  QuadraticAssignment.h  QuadraticAssignmentProblem.cpp  QuadraticAssignmentProblem.h  SimulatedAnnealingSolvable.h  SimulatedAnnealingSolver.cpp  SimulatedAnnealingSolver.h  Solvable.h  StochasticQuadraticAssignment.cpp  StochasticQuadraticAssignment.h  hillclimb.cpp  hillclimb.h  main.cpp  simulated_annealing.cpp  simulated_annealing.h  tsp_solver.cpp
data_structures/: DynamicMatrix.hpp  Matrix.hpp  SymmetricMatrix.hpp
halal_tests/: CMakeLists.txt  dynamic_matrix_test.cpp  genetic_jobshop_test.cpp  jobshop_test.cpp  traveling_salesman_test.cpp
headers/: Chromosome.h  DisjunctiveGraph.h  DynamicMatrix.hpp  GeneticAlgorithm.hpp  GeneticAlgorithmSolver.h  GeneticAlgorithmSolver.hpp  GeneticHiringProblem.h  GeneticJobShop.h  GeneticQuadraticAssignment.h  GeneticSolvable.h  GeneticTravelingSalesman.h  HillClimb.hpp  HiringProblem.h  JobShopProblem.h  Matrix.h  NSGAII.hpp  NSGAIISolver.hpp  OptimizationProblem.h  Problem.h  ProblemRepresentation.h  QuadraticAssignmentProblem.h  RangesExt.h  SimulatedAnnealing.hpp  SimulatedAnnealingSolver.h  SimulatedAnnealingSolver.hpp  Solution.h  SolutionCandidate.h  Solvable.h  StochasticQuadraticAssignment.h  StochasticSolvable.h  StopCondition.h  SymmetricMatrix.hpp  TravelingSalesmanProblem.h  WorkAssignment.h  location.h
include/: tsp_solver.h  tsp_solver_c.h
interfaces-and-templates/: OptimizationProblem.h  Solution.h  StopCondition.hpp
problems/: GeneticHiringProblem.h  GeneticJobShop.cpp  GeneticJobShop.h  GeneticQuadraticAssignment.cpp  GeneticQuadraticAssignment.h  GeneticTravelingSalesman.cpp  GeneticTravelingSalesman.h  HiringProblem.cpp  HiringProblem.h  JobShopProblem.cpp  JobShopProblem.h  PolygonProblem.cpp  PolygonProblem.h  QuadraticAssignmentProblem.cpp  QuadraticAssignmentProblem.h  StochasticQuadraticAssignment.cpp  StochasticQuadraticAssignment.h  TravelingSalesmanProblem.cpp  TravelingSalesmanProblem.h
solvers/: GeneticAlgorithm.hpp  HillClimb.hpp  NSGAII.hpp  ParticleSwarmOptimization.hpp  RandomSearch.hpp  SimulatedAnnealing.hpp  TabooSearch.hpp
source/: GeneticHiringProblem.cpp  GeneticJobShop.cpp  GeneticQuadraticAssignment.cpp  GeneticTravelingSalesman.cpp  HiringProblem.cpp  JobShopProblem.cpp  QuadraticAssignmentProblem.cpp  StochasticQuadraticAssignment.cpp  StopCondition.cpp  TravelingSalesmanProblem.cpp  WorkAssignment.cpp
tests/: main.cpp  tests.cpp  tests.h
utils/: ConceptsExt.h  DynamicMatrix.hpp  Matrix.hpp  SmallestBoundaryPolygon.cpp  SmallestBoundaryPolygon.h  WorkAssignment.cpp  WorkAssignment.h  ranges_ext.hpp
